src/objects/CH_CustomerSpecificTargetSLA__c.object
<CustomObject>
    <description>CH Customer Specific Target SLA</description>
    <fields>
        <fullName>CH_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Set lookup filter to find the correct Account record based on CH_CDB_CustomerId__c. This is part of the Customer specific Legacy target SLA value keys (Account, Service Contract, Line Item Number, Entitlement Id, Severity, Outage)</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CH Customer Specific Target SLAs</relationshipLabel>
        <relationshipName>CH_Customer_Specific_Target_SLAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Entitlement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>When storing the Entitlement record we use this field to map Salesforce Entitlement Id (which then will be used by the Case Milestones) against the correct Service Mapping Id coming from CDB. This is part of the Customer specific Legacy target SLA value keys (Account, Service Contract, Line Item Number, Entitlement Id, Severity, Outage)</description>
        <label>Entitlement Id</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>CH Customer Specific Target SLAs</relationshipLabel>
        <relationshipName>CH_Customer_Specific_Target_SLAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_IR_Duration__c</fullName>
        <description>Initial Response Duration field will be a whole number</description>
        <label>Initial Response Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_IR_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>Initial Response %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_IR_Unit__c</fullName>
        <description>Initial Response Unit</description>
        <label>Initial Response Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_IR_WorkMins__c</fullName>
        <description>Intial Response Work Mins will be a whole number</description>
        <label>Intial Response Work Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_LineItemNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Set lookup filter to find the correct Contract Line Item record based on CH_CDB_Entitlement_ID. This is part of the Customer specific Legacy target SLA value keys (Account, Service Contract, Line Item Number, Entitlement Id, Severity, Outage)</description>
        <label>Line Item Number</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>CH Customer Specific Target SLAs (Line Item Number)</relationshipLabel>
        <relationshipName>CH_Customer_Specific_Target_SLAs1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_Outage__c</fullName>
        <description>Outage</description>
        <label>Outage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SDR_Duration__c</fullName>
        <description>Service Disruption Report Duration will be a whole number</description>
        <label>Service Disruption Report Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SDR_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>Service Disruption Report %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SDR_Unit__c</fullName>
        <description>Service Disruption Report Unit</description>
        <label>Service Disruption Report Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SDR_WorkMins__c</fullName>
        <description>Service Disruption Report Work Mins will be a whole number</description>
        <label>Service Disruption Report Work Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SLARecordStatus__c</fullName>
        <description>New custom picklist with Default value = Active. When CDB sends updates to customer service contract specific target SLA values, we need to inactivate the old row.</description>
        <label>SLA Record Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SPD_Duration__c</fullName>
        <description>Solution Provided Duration (Defect) will be a whole number</description>
        <label>Solution Provided Duration (Defect)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SPD_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>Solution Provided % (Defect)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SPD_Unit__c</fullName>
        <description>Solution Provided Unit (Defect)</description>
        <label>Solution Provided Unit (Defect)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SPD_WorkMins__c</fullName>
        <description>Solution Provided Work Mins (Defect) will be a whole number</description>
        <label>Solution Provided Work Mins (Defect)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SP_Duration__c</fullName>
        <description>Solution Provided Duration (Non Defect) will be a whole number</description>
        <label>Solution Provided Duration (Non Defect)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SP_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>Solution Provided % (Non Defect)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SP_Unit__c</fullName>
        <description>Solution Provided Unit (Non Defect)</description>
        <label>Solution Provided Unit (Non Defect)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SP_WorkMins__c</fullName>
        <description>Solution Provided Work Mins (Non Defect) will be a whole number</description>
        <label>Solution Provided Work Mins (Non Defect)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SR_Duration__c</fullName>
        <description>System Restored Duration will be a whole number</description>
        <label>System Restored Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SR_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>System Restored %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SR_Unit__c</fullName>
        <description>System Restored Unit</description>
        <label>System Restored Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_SR_WorkMins__c</fullName>
        <description>System Restored Work Mins will be a whole number</description>
        <label>System Restored Work Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_ServiceContract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Set lookup filter to find the correct Service Contract record based on CH_CDB_Contract_ID. This is part of the Customer specific Legacy target SLA value keys (Account, Service Contract, Line Item Number, Entitlement Id, Severity, Outage)</description>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>CH Customer Specific Target SLAs</relationshipLabel>
        <relationshipName>CH_Customer_Specific_Target_SLAs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CH_ServiceMappingId__c</fullName>
        <description>Name of Entitlement Process in SF which will enable mapping.</description>
        <label>Service Mapping Id</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_ServiceMappingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Severity__c</fullName>
        <description>Case Severity</description>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Information Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_TSP_Duration__c</fullName>
        <description>Temp Solution Provided Duration will be a whole number</description>
        <label>Temp Solution Provided Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_TSP_Percentage__c</fullName>
        <description>Value when populated should be between 0 to 100</description>
        <label>Temp Solution Provided %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_TSP_Unit__c</fullName>
        <description>Temp Solution Provided Unit</description>
        <label>Temp Solution Provided Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_MilestoneUnitType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_TSP_WorkMins__c</fullName>
        <description>Temp Solution Provided Work Mins will be a whole number</description>
        <label>Temp Solution Provided Work Mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CH Customer Specific Target SLA</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>CH Customer Specific Target SLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Customer Specific Target SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>